tests/dataset/tpc-ds/compiler/c/q50.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static int year = 2001;
static int month = 8;

typedef struct {
  const char *s_store_name;
  int d30;
  int d31_60;
  int d61_90;
  int d91_120;
  int d_gt_120;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ticket;
  int item;
  int sold;
  int customer;
  int store;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ticket;
  int item;
  int returned;
  int customer;
} store_return_t;
typedef struct {
  int len;
  store_return_t *data;
} store_return_list_t;
store_return_list_t create_store_return_list(int len) {
  store_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_year;
  int d_moy;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int s_store_sk;
  const char *s_store_name;
  int s_company_id;
  const char *s_street_number;
  const char *s_street_name;
  const char *s_street_type;
  const char *s_suite_number;
  const char *s_city;
  const char *s_county;
  const char *s_state;
  const char *s_zip;
} store_t;
typedef struct {
  int len;
  store_t *data;
} store_list_t;
store_list_t create_store_list(int len) {
  store_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  store_t s;
  int diff;
} joined_item_t;
typedef struct {
  int len;
  joined_item_t *data;
} joined_item_list_t;
joined_item_list_t create_joined_item_list(int len) {
  joined_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(joined_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int s_store_name;
  int d30;
  int d31_60;
  int d61_90;
  int d91_120;
  int d_gt_120;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q50_simplified_result;
static void test_TPCDS_Q50_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.s_store_name = "Main",
                            .d30 = 1,
                            .d31_60 = 1,
                            .d61_90 = 1,
                            .d91_120 = 1,
                            .d_gt_120 = 1}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q50_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q50_simplified_result.len; i3++) {
      if (test_TPCDS_Q50_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {
      (store_sale_t){
          .ticket = 1, .item = 101, .sold = 1, .customer = 1, .store = 1},
      (store_sale_t){
          .ticket = 2, .item = 102, .sold = 1, .customer = 1, .store = 1},
      (store_sale_t){
          .ticket = 3, .item = 103, .sold = 1, .customer = 1, .store = 1},
      (store_sale_t){
          .ticket = 4, .item = 104, .sold = 1, .customer = 1, .store = 1},
      (store_sale_t){
          .ticket = 5, .item = 105, .sold = 1, .customer = 1, .store = 1}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  store_return_t store_returns[] = {
      (store_return_t){.ticket = 1, .item = 101, .returned = 16, .customer = 1},
      (store_return_t){.ticket = 2, .item = 102, .returned = 46, .customer = 1},
      (store_return_t){.ticket = 3, .item = 103, .returned = 76, .customer = 1},
      (store_return_t){
          .ticket = 4, .item = 104, .returned = 111, .customer = 1},
      (store_return_t){
          .ticket = 5, .item = 105, .returned = 151, .customer = 1}};
  int store_returns_len = sizeof(store_returns) / sizeof(store_returns[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_year = 2001, .d_moy = 7},
      (date_dim_t){.d_date_sk = 16, .d_year = 2001, .d_moy = 8},
      (date_dim_t){.d_date_sk = 46, .d_year = 2001, .d_moy = 8},
      (date_dim_t){.d_date_sk = 76, .d_year = 2001, .d_moy = 8},
      (date_dim_t){.d_date_sk = 111, .d_year = 2001, .d_moy = 8},
      (date_dim_t){.d_date_sk = 151, .d_year = 2001, .d_moy = 8}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  store_t store[] = {(store_t){.s_store_sk = 1,
                               .s_store_name = "Main",
                               .s_company_id = 1,
                               .s_street_number = "1",
                               .s_street_name = "Main",
                               .s_street_type = "St",
                               .s_suite_number = "100",
                               .s_city = "City",
                               .s_county = "County",
                               .s_state = "CA",
                               .s_zip = "12345"}};
  int store_len = sizeof(store) / sizeof(store[0]);
  joined_item_list_t tmp4 =
      joined_item_list_t_create(store_sales.len * store_returns.len *
                                date_dim.len * date_dim.len * store.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < store_sales_len; tmp6++) {
    store_sale_t ss = store_sales[tmp6];
    for (int tmp7 = 0; tmp7 < store_returns_len; tmp7++) {
      store_return_t sr = store_returns[tmp7];
      if (!(ss.ticket == sr.ticket && ss.item == sr.item &&
            ss.customer == sr.customer)) {
        continue;
      }
      for (int tmp8 = 0; tmp8 < date_dim_len; tmp8++) {
        date_dim_t d1 = date_dim[tmp8];
        if (!(ss.sold == d1.d_date_sk)) {
          continue;
        }
        for (int tmp9 = 0; tmp9 < date_dim_len; tmp9++) {
          date_dim_t d2 = date_dim[tmp9];
          if (!(sr.returned == d2.d_date_sk && d2.d_year == year &&
                d2.d_moy == month)) {
            continue;
          }
          for (int tmp10 = 0; tmp10 < store_len; tmp10++) {
            store_t s = store[tmp10];
            if (!(ss.store == s.s_store_sk)) {
              continue;
            }
            tmp4.data[tmp5] =
                (joined_item_t){.s = s, .diff = sr.returned - ss.sold};
            tmp5++;
          }
        }
      }
    }
  }
  tmp4.len = tmp5;
  joined_item_list_t joined = tmp4;
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i11 = 0; i11 < result.len; i11++) {
    if (i11 > 0)
      printf(",");
    result_item_t it = result.data[i11];
    printf("{");
    _json_string("s_store_name");
    printf(":");
    _json_int(it.s_store_name);
    printf(",");
    _json_string("d30");
    printf(":");
    _json_int(it.d30);
    printf(",");
    _json_string("d31_60");
    printf(":");
    _json_int(it.d31_60);
    printf(",");
    _json_string("d61_90");
    printf(":");
    _json_int(it.d61_90);
    printf(",");
    _json_string("d91_120");
    printf(":");
    _json_int(it.d91_120);
    printf(",");
    _json_string("d_gt_120");
    printf(":");
    _json_int(it.d_gt_120);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q50_simplified_result = result;
  test_TPCDS_Q50_simplified();
  return 0;
}
